# cozmo-ai

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
agent/: Dockerfile  agent.py  pyproject.toml
agent/app/: __init__.py  bootstrap.py  call_state.py  config.py  job.py  telephony.py  transcripts.py
agent/app/dialog/: __init__.py  conversation.py  fallbacks.py  objection_handler.py  transfer.py
agent/app/observability/: __init__.py  metrics.py  quality.py  system.py
agent/app/pipeline/: __init__.py  interruption.py  llm.py  rag.py  stt.py  tts.py  turns.py  vad.py
agent/app/recovery/: __init__.py  rejoin.py
agent/tests/: __init__.py
agent/tests/integration/: test_interruption.py  test_metrics_scrape.py  test_quality.py  test_reliability.py  test_telephony.py  test_turn_pipeline.py
agent/tests/unit/: test_agent_settings.py  test_bootstrap.py  test_call_state.py  test_dialog.py  test_interruption.py  test_job.py  test_live_session.py  test_metrics.py  test_pipeline.py  test_recovery.py  test_transcripts.py  test_tts.py  test_vad.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/middleware/: __init__.py  auth.py  logging.py
backend/app/models/: __init__.py  agent_config.py  call_session.py  transcript.py
backend/app/observability/: __init__.py  metrics.py
backend/app/routers/: agents.py  calls.py  health.py  knowledge.py  metrics.py  webhooks.py
backend/app/services/: __init__.py  agent_config_service.py  ingest_jobs.py  knowledge_service.py  livekit_service.py  livekit_webhook_auth.py  mongo.py  session_service.py  telephony.py  webhook_ingestion.py
backend/tests/integration/: support.py  test_health.py  test_knowledge.py  test_live_mongo.py  test_metrics.py  test_persistence.py  test_startup_and_routes.py  test_webhooks.py
backend/tests/unit/: test_backend_settings.py  test_livekit_provisioning.py  test_livekit_webhook_auth.py  test_logging.py  test_phase2_telephony.py
contracts/: pyproject.toml
contracts/cozmo_contracts/: __init__.py  events.py  models.py  runtime.py  validators.py
contracts/tests/unit/: test_events.py  test_models.py  (+1 more)
knowledge/: chunker.py  embeddings.py  ingest.py  pyproject.toml
knowledge/cozmo_knowledge/: __init__.py  chunker.py  embeddings.py  ingest.py  models.py  vector_store.py
knowledge/fixtures/: README.md  main-faq-ingest.json  main-faq.json
(+43 files in other folders)
