[project]
name = "knowledge"
version = "0.1.0"
description = "Knowledge ingestion and retrieval scaffold for Cozmo Voice Platform"
requires-python = ">=3.12"
dependencies = [
  "chromadb==0.5.23",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
